Closed Bug 1037613 Opened 10 years ago Closed 10 years ago

rm js_GetLocalizedErrorMessage, localeGetErrorMessage callback

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla33

People

(Reporter: jandem, Assigned: jandem)

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
JSLocaleCallbacks has a localeGetErrorMessage callback, but it's always null in Firefox. If we remove it, we can also remove js_GetLocalizedErrorMessage. Maybe some other embedder out there uses the localeGetErrorMessage callback but I doubt it.

Also, the error callbacks have a |const char *locale| argument, but it's always nullptr (and unused) so I removed it as well.
Attachment #8454632 - Flags: review?(jorendorff)
Comment on attachment 8454632 [details] [diff] [review]
Patch

Review of attachment 8454632 [details] [diff] [review]:
-----------------------------------------------------------------

::: js/src/jscntxt.cpp
@@ +677,1 @@
>          AutoSuppressGC suppressGC(cx);

While we're in this code, do you know why we suppress GC here?
Attachment #8454632 - Flags: review?(jorendorff) → review+
(In reply to Jason Orendorff [:jorendorff] from comment #1)
> While we're in this code, do you know why we suppress GC here?

It's just a way to suppress the static analysis, it treats function pointer calls as GC calls but in practice none of these can GC. I'm pretty sure there are places where we'd need extra Rooteds if we didn't silence the analysis.
https://hg.mozilla.org/mozilla-central/rev/43878d4b6d7f
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: